# realtime-analytics-platform

./: .env.example  .gitignore  Makefile  pyproject.toml  readme.md
apps/contracts/: requirements.txt
apps/contracts/rtap_contracts/: register_and_probe.py  schema_ops.py  settings.py
apps/contracts/schemas/avro/: device_metric.v1.avsc
apps/contracts/schemas/json/: device_metric.v1.json
apps/contracts/tests/: test_schema.py
apps/producer/: requirements.txt
apps/producer/producer/: avro_wire.py  generator.py  main.py  settings.py
apps/topics/: manage_topics.py
dashboards/grafana/provisioning/datasources/: clickhouse.yml
infra/compose/: docker-compose.yml
infra/kafka/: topics.yaml
ops/: healthcheck.sh
