[project]
name = "rt-analytics-pipeline"
version = "0.0.1"
description = "Kafka ➜ Spark ➜ ClickHouse ➜ Grafana local stack"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","UP","N","PT","RUF"]
lint.ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
